@@ -78,6 +78,9 @@
 	    </td>
     </tr>
     [% END %]
+    <tr>
+        <td class="pf" colspan="3" align="right"><font size="-1">{+[% total_new_changes %],-[% total_old_changes %]}</font></td>
+    </tr>
     </table>
 
 </table>
